--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,8 @@
 - support for SPV like in Bitcoinj
 - support for HD wallets
 
+- Scrypt wrapper API where fixed number of rounds and memory usage can be specified (and not computed from current machine capabilities) [bounty 0.1 BTC by @oleganza]
+
 - BitcoinQT wallet reader.
 - Blockchain.info wallet reader.
 - Unit tests for EC sign/verify.
