--- a/TODO.txt
+++ b/TODO.txt
@@ -3,13 +3,14 @@
 - support for network messages
 - support for SPV like in Bitcoinj
 - add aggregate header CoreBitcoinTests.h with tests
+- deterministic ECDSA (where nonce is derived from privkey and message hash)
 + support for HD wallets
 
 - Scrypt wrapper API where fixed number of rounds and memory usage can be specified (and not computed from current machine capabilities) [bounty 0.1 BTC by @oleganza]
 
 - BitcoinQT wallet reader.
 - Blockchain.info wallet reader.
-- Unit tests for EC sign/verify.
++ Unit tests for EC sign/verify.
 - Unit tests for transaction parsing/serialization.
 - Modern unit test suite in Xcode 5 (currently asserts work good enough; if you want to improve that, do it yourself).
 
