--- a/TODO.txt
+++ b/TODO.txt
@@ -10,7 +10,6 @@ TODO:
 - number formatter for various btc units
 - bitcoin URL support (parsing and composing)
 - currency converter to have a common codebase not linked to any exchange
-- transaction builder
 - BitcoinQT wallet reader.
 - Blockchain.info wallet reader.
 - Modern unit test suite in Xcode 5 (currently asserts work good enough; if you want to improve that, do it yourself).
@@ -30,6 +29,8 @@ Peer-to-peer connectivity features:
 
 
 Done:
+
++ configurable and extensible transaction builder
 
 + Unit tests for EC sign/verify.
 + Unit tests for transaction parsing/serialization.
