added BTCBitcoinURL to parse and compose Bitcoin URLs (only basic properties are supported for now)

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,7 +8,6 @@ TODO:
 - add aggregate header CoreBitcoinTests.h with tests
 - QR code support (rendering and scanning) for OS X and iOS
 - number formatter for various btc units
-- bitcoin URL support (parsing and composing)
 - currency converter to have a common codebase not linked to any exchange
 - BitcoinQT wallet reader.
 - Blockchain.info wallet reader.
@@ -30,6 +29,7 @@ Peer-to-peer connectivity features:
 
 Done:
 
++ bitcoin URL support (parsing and composing)
 + configurable and extensible transaction builder
 
 + Unit tests for EC sign/verify.
