--- a/TODO.txt
+++ b/TODO.txt
@@ -7,7 +7,6 @@ TODO:
 - support for SPV like in Bitcoinj
 - add aggregate header CoreBitcoinTests.h with tests
 - QR code support (rendering and scanning) for OS X and iOS
-- currency converter to have a common codebase not linked to any exchange
 - BitcoinQT wallet reader.
 - Blockchain.info wallet reader.
 - Modern unit test suite in Xcode 5 (currently asserts work good enough; if you want to improve that, do it yourself).
@@ -28,6 +27,7 @@ Peer-to-peer connectivity features:
 
 Done:
 
++ currency converter to have a common codebase not linked to any exchange
 + number formatter for various btc units
 + bitcoin URL support (parsing and composing)
 + configurable and extensible transaction builder
